<resources>
    <string name="app_name">Quiz_App</string>
    <string name="welcome_message">Welcome :)</string>
    <string name="enter_name_message">Please enter your name</string>
    <string name="name_example">e.g: John Smith</string>
    <string name="start_button">Start</string>
    <string name="question">Question</string>
    <string name="first_answer">First answer</string>
    <string name="second_answer">Second answer</string>
    <string name="third_answer">Third answer</string>
    <string name="fourth_answer">Fourth answer</string>
    <string name="submit_text">Submit</string>
    <string name="next_question_text">Next Question</string>
    <string name="finish_text">Finish</string>
    <string name="Congratulations_text">Congratulations %1$s!</string>
    <string name="result_text">You answered %1$d out of %2$d questions correctly!</string>
    <string name="play_again">Play again!</string>
    <string name="exit_quiz">Exit</string>
    <string name="result">Result</string>
</resources>