<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColorLight">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:text="@string/result"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@drawable/ic_trophy"
        />

    <TextView android:id="@+id/congratsTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/Congratulations_text" />

    <TextView android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:text="@string/result_text" />

    <Button android:id="@+id/playAgain"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/play_again"
        android:textSize="30sp"
        android:background="@color/yellow"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

</LinearLayout>